--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: row-reverse;
         }
         header {
-            background: #f4f4f4;
+            background: #f9f9f9;
             padding: 1rem;
             text-align: center;
             width: 100%;
@@ -21,16 +22,18 @@
         }
         nav {
             width: 250px;
-            background: #333;
-            color: #fff;
+            background: #f4f4f4;
+            color: #333;
             padding: 1rem;
             height: 100vh;
             position: sticky;
             top: 0;
+            box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.1);
         }
         nav h2 {
-            color: #fff;
+            color: #333;
             margin-bottom: 10px;
+            font-weight: bold;
         }
         nav ul {
             list-style-type: none;
@@ -40,14 +43,14 @@
             margin: 10px 0;
         }
         nav ul li a {
-            color: #fff;
+            color: #555;
             text-decoration: none;
             display: block;
             padding: 5px 10px;
             border-radius: 4px;
         }
         nav ul li a:hover {
-            background: #575757;
+            background: #e0e0e0;
         }
         main {
             flex: 1;
@@ -59,7 +62,7 @@
             margin-bottom: 2rem;
         }
         .post {
-            border-bottom: 1px solid #ccc;
+            border-bottom: 1px solid #ddd;
             padding: 10px 0;
         }
         .post h3 {
@@ -76,7 +79,7 @@
             text-align: center;
             margin-top: 2rem;
             padding: 1rem 0;
-            background: #f4f4f4;
+            background: #f9f9f9;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
         }
     </style>
@@ -138,4 +141,3 @@
     </footer>
 </body>
 </html>
-
