--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             display: flex;
-            flex-direction: row-reverse;
+            flex-direction: column; /* 세로 방향으로 배치 */
         }
         header {
             background: #f9f9f9;
@@ -21,14 +21,11 @@
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         }
         nav {
-            width: 250px;
+            width: 100%; /* 네비게이션을 전체 너비로 설정 */
             background: #f4f4f4;
             color: #333;
             padding: 1rem;
-            height: 100vh;
-            position: sticky;
-            top: 0;
-            box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         }
         nav h2 {
             color: #333;
@@ -53,10 +50,10 @@
             background: #e0e0e0;
         }
         main {
-            flex: 1;
+            flex: 1; /* 메인 콘텐츠가 가능한 공간을 차지하도록 설정 */
             padding: 20px;
             max-width: 800px;
-            margin: auto;
+            margin: auto; /* 중앙 정렬 */
         }
         section {
             margin-bottom: 2rem;
@@ -135,9 +132,10 @@
             </article>
         </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 내 GitHub 블로그. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
