--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <a href="#life">Life</a>
         <a href="#tech">Tech</a>
         <a href="#education">Education</a>
+        <a href="#education">Fun</a>
     </nav>
     <div class="container">
         <section id="life">
