--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
             <ul>
                 <li><a href="#">Note 1: Reflections on Daily Life</a></li>
                 <li><a href="#">Note 2: Finding Balance</a></li>
+                <li><a href="#">Note 1: Reflections on Daily Life</a></li>
+                <li><a href="#">Note 2: Finding Balance</a></li>
+                <li><a href="#">Note 1: Reflections on Daily Life</a></li>
+                <li><a href="#">Note 2: Finding Balance</a></li>
+                <li><a href="#">Note 1: Reflections on Daily Life</a></li>
+                <li><a href="#">Note 2: Finding Balance</a></li>
+                <li><a href="#">Note 1: Reflections on Daily Life</a></li>
+                <li><a href="#">Note 2: Finding Balance</a></li>
+                <li><a href="#">Note 1: Reflections on Daily Life</a></li>
+                <li><a href="#">Note 2: Finding Balance</a></li>
+                <li><a href="#">Note 1: Reflections on Daily Life</a></li>
+                <li><a href="#">Note 2: Finding Balance</a></li>
+                <li><a href="#">Note 1: Reflections on Daily Life</a></li>
+                <li><a href="#">Note 2: Finding Balance</a></li>
+                <li><a href="#">Note 1: Reflections on Daily Life</a></li>
+                <li><a href="#">Note 2: Finding Balance</a></li>
+                <li><a href="#">Note 1: Reflections on Daily Life</a></li>
+                <li><a href="#">Note 2: Finding Balance</a></li>
             </ul>
         </section>
         <section id="tech">
@@ -95,6 +113,13 @@
             </ul>
         </section>
         <section id="education">
+            <h2>Education</h2>
+            <ul>
+                <li><a href="#">Note 1: Lifelong Learning</a></li>
+                <li><a href="#">Note 2: Modern Educational Methods</a></li>
+            </ul>
+        </section>
+        <section id="fun">
             <h2>Education</h2>
             <ul>
                 <li><a href="#">Note 1: Lifelong Learning</a></li>
