--- a/index.html
+++ b/index.html
@@ -103,11 +103,59 @@
                     <a href="#">Note 2: Finding Balance</a>
                     <p>"Finding balance in the chaos of daily life."</p>
                 </li>
+                 <li>
+                    <a href="#">Note 1: Reflections on Daily Life</a>
+                    <p>"Life is a journey of discovery and growth."</p>
+                </li>
+                <li>
+                    <a href="#">Note 2: Finding Balance</a>
+                    <p>"Finding balance in the chaos of daily life."</p>
+                </li>
+                 <li>
+                    <a href="#">Note 1: Reflections on Daily Life</a>
+                    <p>"Life is a journey of discovery and growth."</p>
+                </li>
+                <li>
+                    <a href="#">Note 2: Finding Balance</a>
+                    <p>"Finding balance in the chaos of daily life."</p>
+                </li>
+                 <li>
+                    <a href="#">Note 1: Reflections on Daily Life</a>
+                    <p>"Life is a journey of discovery and growth."</p>
+                </li>
+                <li>
+                    <a href="#">Note 2: Finding Balance</a>
+                    <p>"Finding balance in the chaos of daily life."</p>
+                </li>
+                 <li>
+                    <a href="#">Note 1: Reflections on Daily Life</a>
+                    <p>"Life is a journey of discovery and growth."</p>
+                </li>
+                <li>
+                    <a href="#">Note 2: Finding Balance</a>
+                    <p>"Finding balance in the chaos of daily life."</p>
+                </li>
             </ul>
         </section>
         <section id="tech">
             <h2>Tech</h2>
             <ul>
+                <li>
+                    <a href="#">Note 1: Latest Tech Trends</a>
+                    <p>"AI is shaping the future of innovation."</p>
+                </li>
+                <li>
+                    <a href="#">Note 2: My Favorite Tools</a>
+                    <p>"Discovering tools that make work easier."</p>
+                </li>
+                <li>
+                    <a href="#">Note 1: Latest Tech Trends</a>
+                    <p>"AI is shaping the future of innovation."</p>
+                </li>
+                <li>
+                    <a href="#">Note 2: My Favorite Tools</a>
+                    <p>"Discovering tools that make work easier."</p>
+                </li>
                 <li>
                     <a href="#">Note 1: Latest Tech Trends</a>
                     <p>"AI is shaping the future of innovation."</p>
