--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h2>Life</h2>
             <ul>
                 <li>
-                    <a href="#">Note 1: Reflections on Daily Life</a>
+                    <a href="/Education/intro.html">Note 1: Reflections on Daily Life</a>
                     <p>"Life is a journey of discovery and growth."</p>
                 </li>
                 <li>
