--- a/Education/intro2.html
+++ b/Education/intro2.html
@@ -26,7 +26,7 @@
 
     <script>
         // Markdown 파일 로드 및 렌더링
-        fetch("../Howtousdhuggingface.md") // Markdown 파일 경로
+        fetch("sample.md") // Markdown 파일 경로
             .then(response => response.text())
             .then(text => {
                 document.getElementById("content").innerHTML = marked(text);
