html contains markdown script

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p>"Finding balance in the chaos of daily life."</p>
                 </li>
                  <li>
-                    <a href="/life/post1.md">Note 1: Reflections on Daily Life</a>
+                    <a href="/life/intro3.html">Note 1: Reflections on Daily Life</a>
                     <p>"Life is a journey of discovery and growth."</p>
                 </li>
                 <li>
