--- a/life/intro3.html
+++ b/life/intro3.html
@@ -18,6 +18,15 @@
             border-radius: 5px;
             overflow-x: auto;
         }
+        h1, h2, h3 {
+            color: #333;
+        }
+        blockquote {
+            font-style: italic;
+            color: #555;
+            border-left: 4px solid #ccc;
+            padding-left: 10px;
+        }
     </style>
 </head>
 <body>
@@ -25,7 +34,7 @@
     <div id="content"></div>
 
     <script>
-        // Markdown 내용 직접 정의
+        // Markdown content as a string
         const markdownContent = `
 # Markdown Viewer
 
@@ -46,11 +55,10 @@ console.log("Hello, Markdown!");
 ---
 
 > **Note**: This approach avoids managing multiple files.
-
         `;
 
-        // Render the Markdown content
-        document.getElementById("content").innerHTML = marked(markdownContent);
+        // Use marked.js to render the Markdown and inject it into the HTML
+        document.getElementById("content").innerHTML = marked.parse(markdownContent);
     </script>
 </body>
 </html>
