--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <p>"Life is a journey of discovery and growth."</p>
                 </li>
                 <li>
-                    <a href="#">Note 2: Finding Balance</a>
+                    <a href="/life/intro4.html">Note 2: Finding Balance</a>
                     <p>"Finding balance in the chaos of daily life."</p>
                 </li>
                  <li>
