--- a/index.html
+++ b/index.html
@@ -87,71 +87,39 @@
         <p>Exploring Life, Tech, and Education</p>
     </header>
     <nav>
+        <a href="#education">Education</a>
         <a href="#life">Life</a>
         <a href="#tech">Tech</a>
-        <a href="#education">Education</a>
     </nav>
     <div class="container">
-        <section id="life">
-            <h2>Life</h2>
-            <ul>
-                <li>
-                    <a href="/Education/intro.html">Note 1: Reflections on Daily Life</a>
-                    <p>"Life is a journey of discovery and growth."</p>
-                </li>
-                <li>
-                    <a href="/Education/intro2.html">Note 2: Finding Balance</a>
-                    <p>"Finding balance in the chaos of daily life."</p>
-                </li>
-                 <li>
-                    <a href="/life/intro3.html">Note 1: Reflections on Daily Life</a>
-                    <p>"Life is a journey of discovery and growth."</p>
-                </li>
-                <li>
-                    <a href="/life/intro4.html">Note 2: Finding Balance</a>
-                    <p>"Finding balance in the chaos of daily life."</p>
-                </li>
-            </ul>
-        </section>
-        <section id="tech">
-            <h2>Tech</h2>
-            <ul>
-                <li>
-                    <a href="#">Note 1: Latest Tech Trends</a>
-                    <p>"AI is shaping the future of innovation."</p>
-                </li>
-                <li>
-                    <a href="#">Note 2: My Favorite Tools</a>
-                    <p>"Discovering tools that make work easier."</p>
-                </li>
-                <li>
-                    <a href="#">Note 1: Latest Tech Trends</a>
-                    <p>"AI is shaping the future of innovation."</p>
-                </li>
-                <li>
-                    <a href="#">Note 2: My Favorite Tools</a>
-                    <p>"Discovering tools that make work easier."</p>
-                </li>
-                <li>
-                    <a href="#">Note 1: Latest Tech Trends</a>
-                    <p>"AI is shaping the future of innovation."</p>
-                </li>
-                <li>
-                    <a href="#">Note 2: My Favorite Tools</a>
-                    <p>"Discovering tools that make work easier."</p>
-                </li>
-            </ul>
-        </section>
         <section id="education">
             <h2>Education</h2>
             <ul>
                 <li>
-                    <a href="#">Note 1: Lifelong Learning</a>
-                    <p>"The joy of learning never fades."</p>
+                    <a href="/Education/hrmlformat.html">Note 1: Reflections on Daily Life</a>
+                    <p>"Life is a journey of discovery and growth."</p>
                 </li>
                 <li>
-                    <a href="#">Note 2: Modern Educational Methods</a>
-                    <p>"How technology is transforming classrooms."</p>
+                    <a href="/Education/mdlinkedinhtml.html">Note 2: Finding Balance</a>
+                    <p>"Finding balance in the chaos of daily life."</p>
+                </li>
+            </ul>
+        </section>
+        <section id="life">
+            <h2>Life</h2>
+            <ul>
+                <li>
+                    <a href="/Life/MDinsertinhtml.html">Note 1: Latest Tech Trends</a>
+                    <p>"AI is shaping the future of innovation."</p>
+                </li>
+            </ul>
+        </section>
+        <section id="tech">
+            <h2>technology</h2>
+            <ul>
+                <li>
+                    <a href="/Tech/imagegernertion.html">Note 1: Lifelong Learning</a>
+                    <p>"The joy of learning never fades."</p>
                 </li>
             </ul>
         </section>
