--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
             <h2>Life</h2>
             <ul>
                 <li>
+                    <a href="/Life/futureself.html">퓨처셀프_벤자민하디</a>
+                    <p>"당신이 어떤 행동을 하든 그것은 미래의 당신이 갚아야 할 비용 아니면 미래의 당신에 대한 투자다."</p>
+                </li>
+                <li>
                     <a href="/Life/MDinsertinhtml.html">Note 1: Latest Tech Trends</a>
                     <p>"AI is shaping the future of innovation."</p>
                 </li>
