--- a/Life/futureself.html
+++ b/Life/futureself.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <h1>Markdown Viewer</h1>
+    <h1>Future Self</h1>
     <div id="content"></div>
 
     <script>
