홈페이지 내용 정리

--- a/index.html
+++ b/index.html
@@ -83,25 +83,35 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Blog</h1>
-        <p>Exploring Life, Tech, and Education</p>
+        <h1>Welcome to Readmuch's Blog</h1>
+        <p>Exploring Book, Life, Tech, and Education</p>
     </header>
     <nav>
+        <a href="#book">Education</a>
         <a href="#education">Education</a>
         <a href="#life">Life</a>
         <a href="#tech">Tech</a>
     </nav>
     <div class="container">
+        <section id="book">
+            <h2>Education</h2>
+            <ul>
+                <li>
+                    <a href="/Book/futureself.html">퓨처셀프_벤자민하디</a>
+                    <p>"당신이 어떤 행동을 하든 그것은 미래의 당신이 갚아야 할 비용 아니면 미래의 당신에 대한 투자다."</p>
+                </li>
+            </ul>
+        </section>
         <section id="education">
             <h2>Education</h2>
             <ul>
                 <li>
-                    <a href="/Education/hrmlformat.html">Note 1: Reflections on Daily Life</a>
-                    <p>"Life is a journey of discovery and growth."</p>
+                    <a href="/Education/markdowninhtml.md"> html file 내에서 MD 문서 작성하기</a>
+                    <p>"html 문서에 Markdown 문서 작성하여 웹에 개시하는 방법"</p>
                 </li>
                 <li>
-                    <a href="/Education/mdlinkedinhtml.html">Note 2: Finding Balance</a>
-                    <p>"Finding balance in the chaos of daily life."</p>
+                    <a href="/Education/MDfetchinhtml.html"> markdown 파일을 html 문서내에서 패치하기</a>
+                    <p>"html파일과 markdown파일을 각각 만들고 html 파일내에 markdown 파일을 패치하는 코드를 작성한다."</p>
                 </li>
             </ul>
         </section>
@@ -109,12 +119,8 @@
             <h2>Life</h2>
             <ul>
                 <li>
-                    <a href="/Life/futureself.html">퓨처셀프_벤자민하디</a>
-                    <p>"당신이 어떤 행동을 하든 그것은 미래의 당신이 갚아야 할 비용 아니면 미래의 당신에 대한 투자다."</p>
-                </li>
-                <li>
-                    <a href="/Life/MDinsertinhtml.html">Note 1: Latest Tech Trends</a>
-                    <p>"AI is shaping the future of innovation."</p>
+                    <a href="/Life/EasyTastyHealthyRecipes.md">토마토 계란 볶음</a>
+                    <p>"토마토와 계란을 활용한 영양만점 요리법, 요리시간 10분내"</p>
                 </li>
             </ul>
         </section>
@@ -122,14 +128,14 @@
             <h2>technology</h2>
             <ul>
                 <li>
-                    <a href="/Tech/imagegernertion.html">Note 1: Lifelong Learning</a>
-                    <p>"The joy of learning never fades."</p>
+                    <a href="/Tech/imagegernertion.html">허깅페이스를 활용한 이미지 생성</a>
+                    <p>"기초적인 이미지 생성 프로세스, 파일럿을 시도해보세요"</p>
                 </li>
             </ul>
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 My Blog. All Rights Reserved.</p>
+        <p>&copy; 2024 Readmuch Blog. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
