--- a/Education/markdowninhtml.html
+++ b/Education/markdowninhtml.html
@@ -35,7 +35,7 @@
 
     <script>
         // Markdown 파일 로드 및 렌더링
-        fetch("mdlinkedinhtml.md") // Markdown 파일 경로
+        fetch("markdowninhtml.md") // Markdown 파일 경로
             .then(response => {
                 if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
