--- a/Education/MDfetchinhtml.html
+++ b/Education/MDfetchinhtml.html
@@ -18,25 +18,16 @@
             border-radius: 5px;
             overflow-x: auto;
         }
-        h1, h2, h3 {
-            color: #333;
-        }
-        blockquote {
-            font-style: italic;
-            color: #555;
-            border-left: 4px solid #ccc;
-            padding-left: 10px;
-        }
     </style>
 </head>
 <body>
-    <h1>기록해 두고 싶은 책 구절</h1>
+    <h1>Markdown Viewer</h1>
     <div id="content"></div>
 
     <script>
-        // Markdown content as a string
+        // Markdown 내용 직접 정의
         const markdownContent = `
-# Markdown Viewer test
+# Markdown Viewer
 
 This is a **simple example** of how to display Markdown content directly in an HTML file.
 
@@ -55,10 +46,11 @@ console.log("Hello, Markdown!");
 ---
 
 > **Note**: This approach avoids managing multiple files.
+
         `;
 
-        // Use marked.js to render the Markdown and inject it into the HTML
-        document.getElementById("content").innerHTML = marked.parse(markdownContent);
+        // Render the Markdown content
+        document.getElementById("content").innerHTML = marked(markdownContent);
     </script>
 </body>
 </html>
