--- a/Life/EasyTastyHealthyRecipes.html
+++ b/Life/EasyTastyHealthyRecipes.html
@@ -30,12 +30,11 @@
     </style>
 </head>
 <body>
-    <h1>Future Self</h1>
     <div id="content"></div>
 
     <script>
         // Markdown 파일 로드 및 렌더링
-        fetch("futureself.md") // Markdown 파일 경로
+        fetch("EasyTastyHealthyRecipes.md") // Markdown 파일 경로
             .then(response => {
                 if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
