--- a/Life/EasyTastyHealthyRecipes.html
+++ b/Life/EasyTastyHealthyRecipes.html
@@ -34,7 +34,7 @@
 
     <script>
         // Markdown 파일 로드 및 렌더링
-        fetch("imagegeneration.md") // Markdown 파일 경로
+        fetch("../Tech/imagegeneration.md") // Markdown 파일 경로
             .then(response => {
                 if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
