--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h2>Education</h2>
             <ul>
                 <li>
-                    <a href="/Education/markdowninhtml.md"> html file 내에서 MD 문서 작성하기</a>
+                    <a href="/Education/markdowninhtml.html"> html file 내에서 MD 문서 작성하기</a>
                     <p>"html 문서에 Markdown 문서 작성하여 웹에 개시하는 방법"</p>
                 </li>
                 <li>
@@ -119,7 +119,7 @@
             <h2>Life</h2>
             <ul>
                 <li>
-                    <a href="/Life/EasyTastyHealthyRecipes.md">토마토 계란 볶음</a>
+                    <a href="/Life/EasyTastyHealthyRecipes.html">토마토 계란 볶음</a>
                     <p>"토마토와 계란을 활용한 영양만점 요리법, 요리시간 10분내"</p>
                 </li>
             </ul>
