--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
                     <a href="/Education/MDfetchinhtml.html"> markdown 파일을 html 문서내에서 패치하기</a>
                     <p>"html파일과 markdown파일을 각각 만들고 html 파일내에 markdown 파일을 패치하는 코드를 작성한다."</p>
                 </li>
+                <li>
+                    <a href="/Education/infinity.html"> 가무한과 실무한 </a>
+                    <p>"기무한과 실무한에 대해서 알아보자. with chatgpt "</p>
+                </li>
+                <li>
+                    <a href="/Education/lottery.html"> 복권에 두번 당첨될 확률 </a>
+                    <p>"복권에 두번 당첨될 확률은? with chatgpt"</p>
+                </li>
             </ul>
         </section>
         <section id="life">
