--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
                     <a href="/Life/EasyTastyHealthyRecipes.html">토마토 계란 볶음</a>
                     <p>"토마토와 계란을 활용한 영양만점 요리법, 요리시간 10분내"</p>
                 </li>
+                <li>
+                    <a href="/Life/mookook.html">토마토 계란 볶음</a>
+                    <p>"토마토와 계란을 활용한 영양만점 요리법, 요리시간 10분내"</p>
+                </li>
             </ul>
         </section>
         <section id="tech">
