--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     <p>"토마토와 계란을 활용한 영양만점 요리법, 요리시간 10분내"</p>
                 </li>
                 <li>
-                    <a href="/Life/mookook.html">토마토 계란 볶음</a>
-                    <p>"토마토와 계란을 활용한 영양만점 요리법, 요리시간 10분내"</p>
+                    <a href="/Life/mookook.html">시원한 무국</a>
+                    <p>"대파, 무를 활용한 시원한 무국, 요리시간 30분내"</p>
                 </li>
             </ul>
         </section>
