--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                     <a href="/Life/mookook.html">시원한 무국</a>
                     <p>"대파, 무를 활용한 시원한 무국, 요리시간 30분내"</p>
                 </li>
+                <li>
+                    <a href="/Life/myeolchi.html.html">멸치볶음</a>
+                    <p>"간단하게 맛있는 멸치볶음 완성!"</p>
+                </li>
             </ul>
         </section>
         <section id="tech">
