--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <a href="#education">Education</a>
         <a href="#life">Life</a>
         <a href="#tech">Tech</a>
+        <a href="#mindnotes">Tech</a>
     </nav>
     <div class="container">
         <section id="book">
@@ -141,11 +142,20 @@
             </ul>
         </section>
         <section id="tech">
-            <h2>technology</h2>
+            <h2>Technology</h2>
             <ul>
                 <li>
                     <a href="/Tech/imagegernertion.html">허깅페이스를 활용한 이미지 생성</a>
                     <p>"기초적인 이미지 생성 프로세스, 파일럿을 시도해보세요"</p>
+                </li>
+            </ul>
+        </section>
+        <section id="mindnotes">
+            <h2>Mind Notes</h2>
+            <ul>
+                <li>
+                    <a href="/MindNotes/bookclub.html">독서모임</a>
+                    <p>"독서모임이 좋은 이유"</p>
                 </li>
             </ul>
         </section>
