--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <p>"대파, 무를 활용한 시원한 무국, 요리시간 30분내"</p>
                 </li>
                 <li>
-                    <a href="/Life/myeolchi.html.html">멸치볶음</a>
+                    <a href="/Life/myeolchi.html">멸치볶음</a>
                     <p>"간단하게 맛있는 멸치볶음 완성!"</p>
                 </li>
             </ul>
