--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <p>Exploring Book, Life, Tech, and Education</p>
     </header>
     <nav>
-        <a href="#book">Education</a>
+        <a href="#book">Book</a>
         <a href="#education">Education</a>
         <a href="#life">Life</a>
         <a href="#tech">Tech</a>
-        <a href="#mindnotes">Tech</a>
+        <a href="#mindnotes">Mind Notes</a>
     </nav>
     <div class="container">
         <section id="book">
