--- a/index.html
+++ b/index.html
@@ -95,10 +95,14 @@
     </nav>
     <div class="container">
         <section id="book">
-            <h2>Education</h2>
+            <h2>Book</h2>
             <ul>
                 <li>
                     <a href="/Book/futureself.html">퓨처셀프_벤자민하디</a>
+                    <p>"당신이 어떤 행동을 하든 그것은 미래의 당신이 갚아야 할 비용 아니면 미래의 당신에 대한 투자다."</p>
+                </li>
+                <li>
+                    <a href="/Book/realfunmath.html">퓨처셀프_벤자민하디</a>
                     <p>"당신이 어떤 행동을 하든 그것은 미래의 당신이 갚아야 할 비용 아니면 미래의 당신에 대한 투자다."</p>
                 </li>
             </ul>
