--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                     <p>"당신이 어떤 행동을 하든 그것은 미래의 당신이 갚아야 할 비용 아니면 미래의 당신에 대한 투자다."</p>
                 </li>
                 <li>
-                    <a href="/Book/realfunmath.html">퓨처셀프_벤자민하디</a>
-                    <p>"당신이 어떤 행동을 하든 그것은 미래의 당신이 갚아야 할 비용 아니면 미래의 당신에 대한 투자다."</p>
+                    <a href="/Book/realfunmath.html">수학의 진짜 재미</a>
+                    <p>"수학의 진짜 재미란 무엇일까?"</p>
                 </li>
             </ul>
         </section>
