--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
                     <a href="/Life/myeolchi.html">멸치볶음</a>
                     <p>"간단하게 맛있는 멸치볶음 완성!"</p>
                 </li>
+                <li>
+                    <a href="/Life/care.html">카레</a>
+                    <p>"일요일은 카레닷!"</p>
+                </li>
             </ul>
         </section>
         <section id="tech">
