--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@
                     <p>"당신이 어떤 행동을 하든 그것은 미래의 당신이 갚아야 할 비용 아니면 미래의 당신에 대한 투자다."</p>
                 </li>
                 <li>
-                    <a href="/Book/realfunmath.html">수학의 진짜 재미</a>
+                    <a href="/Book/realfunmath.html">수학의 진짜 재미 이창후</a>
                     <p>"수학의 진짜 재미란 무엇일까?"</p>
+                </li>
+                <li>
+                    <a href="/Book/datanoprediction.html">데이터는 예측하지 않는다. 김송규</a>
+                    <p>"데이터 분석을 어떻게 할 것인가? 도움이 되는 데이터 분석"</p>
                 </li>
             </ul>
         </section>
@@ -146,6 +150,10 @@
                 <li>
                     <a href="/Life/care.html">카레</a>
                     <p>"일요일은 카레닷!"</p>
+                </li>
+                <li>
+                    <a href="/Life/soondooboo.html">순두부국</a>
+                    <p>"간단하지만 영양만점 아이들도 같이 먹는 순두부국"</p>
                 </li>
             </ul>
         </section>
