시금치나물물

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
                     <a href="/Life/soondooboo.html">순두부국</a>
                     <p>"간단하지만 영양만점 아이들도 같이 먹는 순두부국"</p>
                 </li>
+                <li>
+                    <a href="/Life/sigmchi.html">시금치나물</a>
+                    <p>"만들면서 뿌듯하고 맛있게 먹으면서 뿌듯한 시금치나물물"</p>
+                </li>
             </ul>
         </section>
         <section id="tech">
