--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
                     <a href="/MindNotes/bookclub.html">독서모임</a>
                     <p>"독서모임이 좋은 이유"</p>
                 </li>
+                <li>
+                    <a href="/MindNotes/bookclub.html">독서모임</a>
+                    <p>"독서모임이 좋은 이유"</p>
+                </li>
             </ul>
         </section>
     </div>
