--- a/index.html
+++ b/index.html
@@ -178,7 +178,11 @@
                     <p>"독서모임이 좋은 이유"</p>
                 </li>
                 <li>
-                    <a href="/MindNotes/bookclub.html">독서모임</a>
+                    <a href="/MindNotes/직시.html">독서모임</a>
+                    <p>"독서모임이 좋은 이유"</p>
+                </li>
+                <li>
+                    <a href="/MindNotes/책이좋은점.html">독서모임</a>
                     <p>"독서모임이 좋은 이유"</p>
                 </li>
             </ul>
