--- a/MindNotes/책이좋은점.html
+++ b/MindNotes/책이좋은점.html
@@ -37,7 +37,7 @@
 
     <script>
         // Markdown 파일 로드 및 렌더링
-        fetch("futureself.md") // Markdown 파일 경로
+        fetch("책이좋은점.md") // Markdown 파일 경로
             .then(response => {
                 if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
