제목수정정

--- a/index.html
+++ b/index.html
@@ -178,12 +178,10 @@
                     <p>"독서모임이 좋은 이유"</p>
                 </li>
                 <li>
-                    <a href="/MindNotes/직시.html">독서모임</a>
-                    <p>"독서모임이 좋은 이유"</p>
+                    <a href="/MindNotes/직시.html">직시</a>
                 </li>
                 <li>
-                    <a href="/MindNotes/책이좋은점.html">독서모임</a>
-                    <p>"독서모임이 좋은 이유"</p>
+                    <a href="/MindNotes/책이좋은점.html">책이 좋은 이유 </a>
                 </li>
             </ul>
         </section>
