--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>"데이터 분석을 어떻게 할 것인가? 도움이 되는 데이터 분석"</p>
                 </li>
                 <li>
-                    <a href="/Book/유혹하는는.html">유혹하는 글쓰기 - 스티븐 킹 </a>
+                    <a href="/Book/유혹하는.html">유혹하는 글쓰기 - 스티븐 킹 </a>
                     <p>"창작자의 교과서, 스티븐 킹의 글쓰기 비법"</p>
                 </li>
             </ul>
