--- a/Book/writing.html
+++ b/Book/writing.html
@@ -37,7 +37,7 @@
 
     <script>
         // Markdown 파일 로드 및 렌더링
-        fetch("유혹하는글쓰기.md") // Markdown 파일 경로
+        fetch("writing.md") // Markdown 파일 경로
             .then(response => {
                 if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
