--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
                     <a href="/Book/writing.html">유혹하는 글쓰기 - 스티븐 킹 </a>
                     <p>"창작자의 교과서, 스티븐 킹의 글쓰기 비법"</p>
                 </li>
+                <li>
+                    <a href="/Book/work.html">일의 격 - 신수정 </a>
+                    <p>"이 시대 직업인들의 멘토, 그의 일에 대한 이야기를 들어보자"</p>
+                </li>
             </ul>
         </section>
         <section id="education">
