--- a/book.html
+++ b/book.html
@@ -84,7 +84,8 @@
             { title: "수학의 진짜 재미 이창후", link: "/Book/realfunmath.html" },
             { title: "데이터는 예측하지 않는다. 김송규", link: "/Book/datanoprediction.html" },
             { title: "유혹하는 글쓰기 - 스티븐 킹", link: "/Book/writing.html" },
-            { title: "일의 격 - 신수정", link: "/Book/work.html" }
+            { title: "일의 격 - 신수정", link: "/Book/work.html" },
+            { title: "창조적 행위: 존재의 방식 - 릭루빈", link: "/Book/creator.html" }
         ];
         
         const postsPerPage = 10;
