--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Category - Book</title>
+    <title>Category - Education</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -66,10 +66,10 @@
 </head>
 <body>
     <header>
-        <h1>Book Category</h1>
+        <h1>Education Category</h1>
     </header>
     <div class="container">
-        <h2>Book List</h2>
+        <h2>Education List</h2>
         <ul id="postList">
             <!-- Book items will be injected here dynamically -->
         </ul>
