--- a/mindnotes.html
+++ b/mindnotes.html
@@ -66,10 +66,10 @@
 </head>
 <body>
     <header>
-        <h1>Book Category</h1>
+        <h1>Mind Notes Category</h1>
     </header>
     <div class="container">
-        <h2>Book List</h2>
+        <h2>MindNotes List</h2>
         <ul id="postList">
             <!-- Book items will be injected here dynamically -->
         </ul>
