--- a/book.html
+++ b/book.html
@@ -85,6 +85,7 @@
             { title: "데이터는 예측하지 않는다. 김송규", link: "/Book/datanoprediction.html" },
             { title: "유혹하는 글쓰기 - 스티븐 킹", link: "/Book/writing.html" },
             { title: "일의 격 - 신수정", link: "/Book/work.html" },
+            { title: "건너가는 자 - 최진석석", link: "Book/choijinsuk.html" },
             { title: "창조적 행위: 존재의 방식 - 릭루빈", link: "/Book/creator.html" }
         ];
         
